@@ -58,9 +58,11 @@ libspectrum_la_SOURCES = bzip2.c \
 			 zlib.c \
 			 zxs.c
 
-libspectrum_la_LDFLAGS = -version-info 7:0:0 -no-undefined
+libspectrum_la_LDFLAGS = -version-info 7:0:0 -no-undefined @WINDRES_LDFLAGS@
 
 libspectrum_la_LIBADD = @AUDIOFILE_LIBS@ -lm
+
+libspectrum_la_DEPENDENCIES = @WINDRES_OBJ@
 
 BUILT_SOURCES = libspectrum.h snap_accessors.c tape_accessors.c tape_set.c
 
@@ -90,6 +92,9 @@ tape_accessors.c: tape_accessors.pl tape_accessors.txt
 
 tape_set.c: tape_set.pl tape_accessors.txt
 	@PERL@ $(srcdir)/tape_set.pl $(srcdir)/tape_accessors.txt > $@.tmp && mv $@.tmp $@
+
+windres.o: windres.rc
+	@WINDRES@ $(srcdir)/windres.rc windres.o
 
 INCLUDES = @GLIB_CFLAGS@ @AUDIOFILE_CFLAGS@
 
